fix margin spacing on main image when in tablet/desktop mode

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ li {
     padding: 1em;
     background-color: var(--color-white);
     padding: var(--spacing-500) var(--spacing-500) 0;
-    margin-top: var(--spacing-600);
+    margin-top: var(--spacing-1600);
   }
   .container {
     background-color: var(--color-white);
